k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nest-app
spec:
  selector:
    app: nest-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
