k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nest-app
                port:
                  number: 3000
